# NMA-shichimi-rulebreakerhalf-comparing-network

./: Find trials uncorrectly labeled grouped by animal_session.ipynb  README.md  Trajectory_plots_for_trials_grouped_by_animal_session.ipynb  data_load_example.ipynb  data_navigation.ipynb  data_proc_rdm_dataprep.ipynb  event_filter.ipynb  explore_neuron_data_spc.ipynb  parametres_for_motornet_CO_task.ipynb  peth_test.ipynb  pyproject.toml
monkeypaw/src/monkeypaw/: analysis.py
src/monkeypaw/: io.py  proc.py  utils.py  viz.py
src/monkeypaw.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
