[build-system]
requires = ["setuptools>=61","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monkeypaw"
version = "0.1.0"
description = "Custom analysis tools"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "torch",
    "pandas",
    "pynapple",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "motornet"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]